# fair-publish

./: README.md  pyproject.toml  simulate_release.py
.github/workflows/: fair-publish.yml  fair-validate.yml
example/: dmp.json  policy.yml
fair_publish/: __init__.py  cli.py  policy.py  rules.py  state.py  validator.py
fair_publish/adapters/: zenodo.py
slides/: demo.aux  demo.nav  demo.out  demo.tex  demo.toc  demo.vrb
