[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fair-publish"
version = "0.1.0"
description = "Policy-enforced FAIR metadata validation and Zenodo publishing pipeline"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "pyyaml>=6.0",
    "madmpy>=0.1",
]

[project.scripts]
fair-publish = "fair_publish.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-httpx"]
